Add Back URL in programs page

--- a/programs/nexa-os.html
+++ b/programs/nexa-os.html
@@ -18,5 +18,6 @@ title: Programs
 	And Fushell will be reworked to inspire NEXA. Same for splash, instdead of ugly loadings,
 	there will be a splash screen with the NEXA Corporation logo.</p>
 	
-	<a href="https://github.com/nexacorp/nexa-os">GitHub</a><br/>
+	<a href="https://github.com/nexacorp/nexa-os">GitHub</a>
+	<a href="/programs/">Back</a>
 </div>
