--- a/programs/osu.html
+++ b/programs/osu.html
@@ -33,5 +33,6 @@ title: Programs
 			<li class="w3-bar">Redstone Card</li>
 		</ul>
 	</p>
-	<a href="https://github.com/nexacorp/osu">GitHub</a><br/>
+	<a href="https://github.com/nexacorp/osu">GitHub</a>
+	<a href="/programs/">Back</a>
 </div>
