Add Motion Sensor

--- a/programs/osu.html
+++ b/programs/osu.html
@@ -31,6 +31,7 @@ title: Programs
 			<li class="w3-bar">Network Integration</li>
 			<li class="w3-bar">Redstone Integration</li>
 			<li class="w3-bar">Redstone Card</li>
+			<li class="w3-bar">Motion Sensor</li>
 		</ul>
 	</p>
 	<a href="https://github.com/nexacorp/osu">GitHub</a>
