--- a/programs/nexa-os.html
+++ b/programs/nexa-os.html
@@ -8,14 +8,14 @@ title: Programs
 		<li class="w3-bar">
 			<div class="w3-bar-item">
 				<a class="w3-large" href="/programs/nexa-os">NEXA OS</a><br/>
-				<span>NEXA Operating System is Fuchas bundled with OSU and some others cool things</span>
+				<span>NEXA Operating System is Fuchas bundled with OSU and some other cool things</span>
 			</div>
 		</li>
 	</ul>
 	<p>NEXA Operating System is based on Fuchas.
 	It includes proprietary tools, including OpenSecurity Utilities,
-	the NEXA OS will also not include the Concert nor the Androoid interfaces from original Fuchas.
-	And Fushell will be reworked to inspire NEXA. Same for splash, instdead of ugly loadings,
+	the NEXA OS will also not include the Concert nor the Android interfaces from original Fuchas.
+	And Fushell will be reworked to have a NEXA design. Same for splash, instdead of ugly loading screens,
 	there will be a splash screen with the NEXA Corporation logo.</p>
 	
 	<a href="https://github.com/nexacorp/nexa-os">GitHub</a>
