--- a/programs/osu.html
+++ b/programs/osu.html
@@ -18,7 +18,7 @@ title: Programs
 			<li class="w3-bar">Magnetic Card</li>
 			<li class="w3-bar">Security Door</li>
 			<li class="w3-bar">RFID Reader</li>
-			<li class="w3-bar">RFID Card Reader</li>
+			<li class="w3-bar">RFID Reader Card</li>
 			<li class="w3-bar">Keypad</li>
 			<li class="w3-bar">Alarm</li>
 			<li class="w3-bar">Card Writer</li>
