--- a/404.html
+++ b/404.html
@@ -1,9 +1,7 @@
 ---
 layout: default
+title: 404 Not Found
 ---
-<head>
-  <title>NEXA - 404 Not Found</title>
-</head>
 <div class="w3-container">
   <h1>404</h1>
 
