--- a/programs/index.html
+++ b/programs/index.html
@@ -8,13 +8,13 @@ title: Programs
 		<li class="w3-bar">
 			<div class="w3-bar-item">
 				<a class="w3-large" href="/programs/osu">OSU</a><br/>
-				<span>Open Security Utilities, modular repository with programs for OpenSecurity</span>
+				<span>OpenSecurity Utilities, modular security suite for OpenSecurity</span>
 			</div>
 		</li>
 		<li class="w3-bar">
 			<div class="w3-bar-item">
 				<a class="w3-large" href="/programs/nexa-os">NEXA OS</a><br/>
-				<span>NEXA Operating System is Fuchas bundled with OSU and some others cool things</span>
+				<span>NEXA Operating System is Fuchas bundled with OSU and some other cool things</span>
 			</div>
 		</li>
 	</ul>
