--- a/programs/osu.html
+++ b/programs/osu.html
@@ -8,7 +8,7 @@ title: Programs
 		<li class="w3-bar">
 			<div class="w3-bar-item">
 				<a class="w3-large" href="#">OSU</a><br/>
-				<span>Open Security Utilities, modular repository with programs for OpenSecurity</span>
+				<span>OpenSecurity Utilities, modular security suite for OpenSecurity</span>
 			</div>
 		</li>
 	</ul>
