add selling point :)

--- a/programs/osu.html
+++ b/programs/osu.html
@@ -12,8 +12,10 @@ title: Programs
 			</div>
 		</li>
 	</ul>
-	<p>Open Security Utilities is modular repository with programs for OpenSecurity.</p>
-	<p>OSU supports all of thoses optional features:
+	<p>OpenSecurity Utilities is a security suite for OpenSecurity.</p>
+	<p>The key part of OSU is that it's modular. You only need to install what you need, instead of the full security suite.</p>
+	<p>OSU also supports a wide variety of features.</p>
+	<p>OSU supports all of these optional features:
 		<ul class="w3-ul w3-border">
 			<li class="w3-bar">Magnetic Card</li>
 			<li class="w3-bar">Security Door</li>
