--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@ title: Home
 	</div>
 	<div class="w3-panel w3-blue w3-round">
 		<h3>OpenSecurity!</h3>
-		<p>NEXA "Corporation" is powered by OpenSecurity mod, employees authentificate with mag or RFID cards</p>
-		<p>It's even possible to Hack the security system and access secret rooms you should never have seen.</p>
-		<p>Of course join the server and try to pearce the secret of NEXA</p>
+		<p>NEXA Corporation is powered by OpenSecurity mod, employees authentificate with mag or RFID cards</p>
+		<p>It's even possible to hack the security system and access secret rooms you should never have seen.</p>
+		<p>Join the server and try to pierce the secret of NEXA!</p>
 	</div>
 	<div class="w3-panel w3-blue w3-round">
 		<h3>Open-Source Programs</h3>
-		<p>NEXA publishes some of developers's programs to the GitHub world. In such way you can use some<br/>
-		OpenSecurity utilities or NEXA OS. Rumours also say one of NEXA's employee is working on a Game OS</p>
+		<p>NEXA publishes some programs to the GitHub world. In such way you can use some<br/>
+		of our programs -- like our security suite or our OS. Rumours also say one of NEXA's employee is working on a Game OS. . .</p>
 	</div>
 	<a href="https://www.curseforge.com/minecraft/modpacks/nexa-corporation" class="w3-animate-bottom">
 		<button class="w3-content w3-btn w3-green w3-round-large" style="width: 100%">Play</button>
