--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 	<div class="w3-panel w3-blue w3-round">
 		<h3>Open-Source Programs</h3>
 		<p>NEXA publishes some programs to the GitHub world. In such way you can use some<br/>
-		of our programs -- like our security suite or our OS. Rumours also say one of NEXA's employee is working on a Game OS. . .</p>
+		of our programs -- like our security suite or our OS. Rumours also say one of NEXA's employees is working on a Game OS. . .</p>
 	</div>
 	<a href="https://www.curseforge.com/minecraft/modpacks/nexa-corporation" class="w3-animate-bottom">
 		<button class="w3-content w3-btn w3-green w3-round-large" style="width: 100%">Play</button>
