--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ title: Home
 		<h3>OpenSecurity!</h3>
 		<p>NEXA Corporation is powered by OpenSecurity mod, employees authentificate with mag or RFID cards</p>
 		<p>It's even possible to hack the security system and access secret rooms you should never have seen.</p>
-		<p>Join the server and try to pierce the secret of NEXA!</p>
+		<p>Join the server, and try to discover the secrets of NEXA!</p>
 	</div>
 	<div class="w3-panel w3-blue w3-round">
 		<h3>Open-Source Programs</h3>
-		<p>NEXA publishes some programs to the GitHub world. In such way you can use some<br/>
+		<p>NEXA publishes some programs to the GitHub world. As such, you can use some<br/>
 		of our programs -- like our security suite or our OS. Rumours also say one of NEXA's employees is working on a Game OS. . .</p>
 	</div>
 	<a href="https://www.curseforge.com/minecraft/modpacks/nexa-corporation" class="w3-animate-bottom">
