--- a/programs/osu.html
+++ b/programs/osu.html
@@ -13,9 +13,9 @@ title: Programs
 		</li>
 	</ul>
 	<p>OpenSecurity Utilities is a security suite for OpenSecurity.</p>
-	<p>The key part of OSU is that it's modular. You only need to install what you need, instead of the full security suite.</p>
+	<p>The key part of OSU is that it's easy to use.</p>
 	<p>OSU also supports a wide variety of features.</p>
-	<p>OSU supports all of these optional features:
+	<p>OSU supports all of these features:
 		<ul class="w3-ul w3-border">
 			<li class="w3-bar">Magnetic Card</li>
 			<li class="w3-bar">Security Door</li>
