Twelfth Sun page

--- a/programs/index.html
+++ b/programs/index.html
@@ -17,5 +17,11 @@ title: Programs
 				<span>NEXA Operating System is Fuchas bundled with OSU and some other cool things</span>
 			</div>
 		</li>
+		<li class="w3-bar">
+			<div class="w3-bar-item">
+				<a class="w3-large" href="/programs/twelfth-sun">Twelfth Sun</a><br/>
+				<span>Twelfth Sun is a draconic reactor controller and API with GUI.</span>
+			</div>
+		</li>
 	</ul>
 </div>
